@@ -1,5 +1,10 @@
 #!/bin/bash
 
-cd /opt/nxiq
-java -jar nexus-iq-server server config.yml
-echo http://localhost:8070
+# cd /opt/nxiq
+# javaopts="-Xmx1024m -XX:MaxPermSize=128m"
+# java $javaopts -jar nexus-iq-server server config.yml
+# echo http://localhost:8070
+
+./nexus-iq-server.sh start
+
+
